--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0"
+    "react-dropzone": "^14.3.5",
+    "react-select": "^5.9.0"
   },
   "devDependencies": {
     "postcss": "^8",
